fixing issues with sun.misc.BASE64Encoder, added new Class Base64Coder for password hash encoding